# fastapi-tdd

./: .flake8  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: app.py
backend/api/v1/: __init__.py
backend/api/v1/routers/: categoria.py  health.py  produto.py  usuario.py
backend/core/: variaveis_de_ambiente.py
backend/database/: conexao.py
backend/models/: __init__.py
migrations/: env.py
postgres/: create-databases.sh
