[tool.poetry]
name = "template base"
version = "0.1.0"
description = "Template FastAPI com Postgres e Async"
authors = ["Thiago Tancredi Trajano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
black = "^23.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
